Bug 209102 - Kaddressbook is too slow when loading an .ICS from an akonadi resource
Summary: Kaddressbook is too slow when loading an .ICS from an akonadi resource
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-01 14:54 UTC by FiNeX
Modified: 2009-11-10 00:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2009-10-01 14:54:47 UTC
Since kaddressbook (SVN) needs akonadi, loading the akonadi resource (which uses an .ICS, I don't have tested other sources) kaddressbook is slow when the contact list is loaded.

Currently my contact list contains about 450 contacts the ICS file is 90Kb.

Loading the list (or change the ordering, from ASC to DESC for example) needs about 5 seconds on a very fast PC.
Comment 1 Thomas McGuire 2009-10-30 11:18:39 UTC
Same here, I have 270 contacts from 3 different address books, and changing the sort order takes about 5 seconds. Loading also takes about that time.
Something seems to be very inefficient, I don't even want to think what happens with 30k mails :)
Comment 2 Tobias Koenig 2009-11-06 18:39:57 UTC
SVN commit 1045731 by tokoe:

Change the behavior of the view in KAddressBook.

If you select an address book folder, only the contacts
inside this folder will be listed (and not all contacts
of all subfolders).
This brings back the performance and might be the behavior
most users would expect.

BUG: 209102


 M  +0 -2      globalcontactmodel.cpp  
 M  +18 -14    mainwidget.cpp  
 M  +2 -1      mainwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1045731
Comment 3 Sabine Faure 2009-11-10 00:36:13 UTC
It is corrected now.

To gain efficiency only the contacts from the selected folder are shown whereas before all contacts from all the subfolders where shown as well.


Trunk, Svn Rev 1046648