Change the behavior of the view in KAddressBook.

If you select an address book folder, only the contacts
inside this folder will be listed (and not all contacts
of all subfolders).
This brings back the performance and might be the behavior
most users would expect.

BUG: 209102

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1045731